--- a/src/components/MoreWindow.module.css
+++ b/src/components/MoreWindow.module.css
@@ -14,6 +14,7 @@
 
 .moreWindow{
   position: absolute;
+  background-color: var(--background-color);
     right: 20px; 
     top: 50px;
     z-index: 1000;
