--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -1,7 +1,14 @@
 .leaflet-container {
-  height: 100%; 
+  height: 43rem; 
   width: 50vw;
   border-radius: 10px;
+}
+@media (max-width: 768px) {
+  .leaflet-container {
+    height: 45rem; 
+    width: 97%;
+    border-radius: 10px;
+  }
 }
 
 .cluster-icon {
