--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -29,6 +29,10 @@
 .mobile_btn {
 	display: none;
 }
+.navbar li a.textLink:hover {
+  font-weight: bold; 
+  transition: font-weight 0.2s ease;
+}
 
 @media screen and (max-width: 720px) {
 	.mobile_btn {
