--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200&display=swap');
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -16,7 +18,7 @@ a {
 body {
 	font-size: 1.2rem;
 	line-height: 1.3;
-	font-family: "Poppins", sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	background-color: #fff9f4;
 }
 
