--- a/src/pages/homePage/Home.module.css
+++ b/src/pages/homePage/Home.module.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200&display=swap');
+
 .home{
  background: url('https://coolwallpapers.me/picsup/5227656-lake-mountain-boat-cloud-landscape-dolomite-wooden-wildsee-water-tyrol-turquoise-trentino-tree-travel-tranquil-tourism-summer-sudtirol-sky-ship-public-domain-images.jpg') no-repeat, center/cover;
-
-
+ filter: brightness(50%);
  background-position: center;
  display: flex;
  width: 100%;
@@ -11,58 +12,142 @@
  flex-direction: column;
  align-items: center;
 }
+/* todo: ładowanie zdjecia */
+.sliderTexts{
+  overflow: hidden;
+  height: 16px;
+  display: flex;
+}
 
-.btn{ 
-  z-index: 100;
+.btnNextPage 
+{ 
+ position: absolute;
+ top: 69vh;
+ color:white;
+ background-color:transparent;
+  width: 130px;
+  height: 40px;
+  padding: 7px 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  outline: none;
+  border-radius: 5px;
+  z-index: 0;
+  background: #fff;
+  overflow: hidden;
+  border: 1px solid white;
+  color: white;
+  background-color: transparent;
+}
+.btnNextPage:hover {
+  color: var(--background-color);
+}
+.btnNextPage:hover:after {
+  width: 100%;
+}
+.btnNextPage:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  transition: all 0.3s ease;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background: white;
+}
+
+.slider {
+  position: absolute;
+  top: 61.5vh;
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  margin: 0 1rem;
+}
+
+.slider p{
+  transition: opacity 0.5s ease-in-out;
+  padding: 0 1rem;
+  width: -webkit-fill-available;
+  overflow: wrap;
+}
+.visible{
+    opacity: 1;
+    visibility: visible; 
+    transition: visibility 0s 0.5s, opacity 0.5s ease-in-out
+}
+.hidden{
+  opacity: 0;
+  visibility: hidden; 
+  transition: visibility 0s 0.5s, opacity 0.5s ease-in-out; 
+}
+
+.slider button {
+  background-color: transparent;
+  color: white;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+
+.slider:hover button {
+  transition: opacity 1s;
+  opacity: 1.0;
+  background-color: transparent;
+  color: white;
 }
 
 .text {
   color: #ffffff;
   margin-top: 5rem;
   margin-bottom: 1rem;
-
 }
-
-.textFocusIn {
-  -webkit-animation: textFocusIn 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  animation: textFocusIn 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  font-size: 70px;
-  color: white;
-
-}
-
-.fillAll{
-  width: -webkit-fill-available;
-  height: -webkit-fill-available;
+.wrapper {
+  height: 0vh; 
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(3px); 
+  place-items: center;
+  flex-direction: column;
+}
+
+.typing {
+  position: absolute;
+  top: 53vh;
+  width: 38rem;
+  animation: typing 2s steps(25), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 2em;
 }
 
 
-@-webkit-keyframes textFocusIn {
-  0% {
-    -webkit-filter: blur(12px);
-            filter: blur(12px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-filter: blur(0px);
-            filter: blur(0px);
-    opacity: 1;
+@media  (max-width: 460px) {
+  .typing {
+    font-size: 1.18rem;
+    top: 50vh; 
+    width: 18.3rem; 
   }
 }
-@keyframes textFocusIn {
-  0% {
-    -webkit-filter: blur(12px);
-            filter: blur(12px);
-    opacity: 0;
+
+@media (min-width: 460px) and (max-width: 650px) {
+  .typing {
+    font-size: 1.5em; 
+    top: 52vh;
+    width: 28rem; 
   }
-  100% {
-    -webkit-filter: blur(0px);
-            filter: blur(0px);
-    opacity: 1;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
   }
 }
