--- a/src/components/emptyPage/EmptyPage.module.css
+++ b/src/components/emptyPage/EmptyPage.module.css
@@ -1,10 +1,7 @@
 .emptyPage {
-  align-self: center;
-  border-radius: 10px;
-  margin: 2rem;
+  margin-right: 5rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   height: 20rem;
   position: absolute;
@@ -13,3 +10,30 @@
   transform: translate(-50%, -50%);
   z-index: -100;
 }
+
+.markers {
+  top: 15rem;
+  position: relative; 
+  margin-right: 2rem;
+  padding: 0 3rem;
+}
+
+.lists {
+  top: 6rem;
+  position: relative;
+  margin-right: 5rem;
+}
+
+@media (max-width: 768px){
+  .markers {
+    top: 6rem;
+    position: relative;
+    margin-right: 5rem;
+  } 
+  .lists {
+    top: 6rem;
+    position: relative;
+    margin-right: 5rem;
+  } 
+}
+
