--- a/src/pages/homePage/Home.module.css
+++ b/src/pages/homePage/Home.module.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200&display=swap');
 
 .home{
- background: url('https://coolwallpapers.me/picsup/5227656-lake-mountain-boat-cloud-landscape-dolomite-wooden-wildsee-water-tyrol-turquoise-trentino-tree-travel-tranquil-tourism-summer-sudtirol-sky-ship-public-domain-images.jpg') no-repeat, center/cover;
+ background-image: url('../../images/home-page-background.jpg');
+ /* background: url('https://coolwallpapers.me/picsup/5227656-lake-mountain-boat-cloud-landscape-dolomite-wooden-wildsee-water-tyrol-turquoise-trentino-tree-travel-tranquil-tourism-summer-sudtirol-sky-ship-public-domain-images.jpg') no-repeat, center/cover; */
  filter: brightness(50%);
  background-position: center;
  display: flex;
