--- a/src/components/travelLists/TravelLists.module.css
+++ b/src/components/travelLists/TravelLists.module.css
@@ -220,9 +220,9 @@
 
 .centerListItems 
 input[type="checkbox"]:hover + label {
-  font-weight: bold;
-  transform: scale(1.2); 
-  transition: transform 0.3s ease; 
+  
+  font-size: 18px; 
+  transition: transform 0.3s;  
 }
 
 
