--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -306,11 +306,11 @@ button{
 }
 
 .noteContent {
-  word-wrap: break-word;
   overflow-wrap: anywhere;
   white-space: normal;
   max-height: 200px; 
   overflow-y: auto;  
+  text-align: left;
 }
 
 .divClick{
@@ -369,7 +369,7 @@ button{
 }
 .markersList{
  padding-top: 0.3rem;
- height:  64vh;
+ max-height:  64vh;
  overflow-y: auto;
  padding-bottom: 0.3rem;
 }
