--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -259,7 +259,7 @@ button{
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
-    display: inline-block;
+    /* display: inline-block; */
     font-weight: 700;
     height: 40px;
     outline: none;
